apps/development/gitea-mirror/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
  namespace: development
  annotations:
    gethomepage.dev/href: "https://forgejo-mirror.cloud.obara.xyz"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Forgejo Mirror"
    gethomepage.dev/description: "Code Sharing"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "sh-gitea-mirror.png"
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - forgejo-mirror.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: oauth2-proxy-gitea-mirror
          namespace: oauth2-proxy
          port: 80
